@@ -258,13 +258,10 @@ cob_gen_optim (const enum cb_optim val)
 
 	case COB_CMP_ALIGN_U64:
 		output_storage ("static COB_INLINE COB_A_INLINE int");
-		output_storage ("cob_cmp_align_u64 (const void *p, const cob_s64_t n)");
+		output_storage ("cob_cmp_align_u64 (const void *p, const cob_u64_t n)");
 		output_storage ("{");
 		output_storage ("	cob_u64_t	val;");
 
-		output_storage ("	if (unlikely(n < 0)) {");
-		output_storage ("		return 1;");
-		output_storage ("	}");
 		output_storage ("	val = *(cob_u64_t __unaligned *)p;");
 		output_storage ("	return (val < n) ? -1 : (val > n);");
 		output_storage ("}");
